# SE-PINN

./: .gitignore  CITATION.cff  LICENSE.md  README.md  SE-PINN.ipynb  SE_PINN.ipynb  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pylint.yml  ruff.yml
SE-PINN/: SE_PINN.ipynb  pinn.py  se_pinn.py  sepinn.py
docs/: quantum_harmonic_oscillator.ipynb
sepinn/: hublayer.py  sepinn.py  wrappedpinn.py
tests/: test_hublayer.py  test_pinn.py  test_wrappedpinn.py
